tests/good/testExplicitTypeInt.grc
// Explicit type, default width
a: int = 12345
print(a)
