tests/bad/testSyntaxExplicitMissingWidth.grc
// Error: Expected integer width inside ()
y: int() = 20
z: int(abc) = 30
